--- a/MeetGavernWP/css/template.css
+++ b/MeetGavernWP/css/template.css
@@ -322,7 +322,7 @@ input[type="tel"]  {
 	font: normal 12px Arial, Helvetica, sans-serif;
 	height: 32px;
 	line-height: 32px;
-	padding: 7px 9px;
+	padding: 0 9px;
 }
 
 textarea {
